* re-fixed #3750 overlay z-index issue

--- a/src/components/AssetsLibrary/GridView.scss
+++ b/src/components/AssetsLibrary/GridView.scss
@@ -23,11 +23,6 @@
 
 .assets-gridview-header {
   padding: 10px 0;
-
-  &.disabled {
-    position: relative;
-    z-index: 0;
-  }
 }
 
 .assets-gridview-row {
@@ -127,7 +122,7 @@
 
 .delete-confirmation-modal {
   position: relative;
-  z-index: 2;
+  z-index: 20;
 }
 
 .hand {
@@ -143,7 +138,7 @@
   width: 100%;
   height: 100%;
   border-radius: 2px;
-  z-index: 1;
+  z-index: 15;
 }
 
 .assets-gridview-container-active {
